--- a/testing_inputs/correct.yaml
+++ b/testing_inputs/correct.yaml
@@ -14,3 +14,31 @@ another_test: |
   } or {
     test = "three";
   }
+string_comments_test: |
+  0
+
+  1
+
+  2
+
+  3
+
+  4
+
+  5
+
+  6
+
+  7
+
+  8
+
+
+
+  9
+   0  1  2
+  3
+
+  4
+
+  5
