--- a/testing_inputs/correct.yaml
+++ b/testing_inputs/correct.yaml
@@ -14,31 +14,4 @@ another_test: |
   } or {
     test = "three";
   }
-string_comments_test: |
-  0
-
-  1
-
-  2
-
-  3
-
-  4
-
-  5
-
-  6
-
-  7
-
-  8
-
-
-
-  9
-   0  1  2
-  3
-
-  4
-
-  5
+is_block_test: 0123456789012345
