--- a/testing_inputs/correct.yaml
+++ b/testing_inputs/correct.yaml
@@ -79,3 +79,70 @@ ifelse:
     - 20
     - 21
     - 28
+  "Sensor.java":
+    ignored_count: 0
+    correct-count: 4
+    correct_lines:
+      - 273
+      - 278
+      - 293
+      - 298
+    correct_alternative_count:
+      - 1
+      - 3
+      - 1
+      - 1
+  "LinkProperties.java":
+    ignored_count: 6
+    correct-count: 21
+    correct_lines:
+      - 103
+      - 173
+      - 250
+      - 252
+      - 298
+      - 315
+      - 374
+      - 416
+      - 430
+      - 469
+      - 508
+      - 514
+      - 584
+      - 586
+      - 613
+      - 615
+      - 641
+      - 643
+      - 690
+      - 709
+      - 728
+    ignored_lines:
+      - 133
+      - 219
+      - 470
+      - 472
+      - 551
+      - 553
+  "MediaRouteControllerDialog.java":
+    ignored_count: 0
+    correct-count: 18
+    correct_lines:
+      - 117
+      - 119
+      - 147
+      - 156
+      - 173
+      - 183
+      - 191
+      - 195
+      - 222
+      - 232
+      - 240
+      - 249
+      - 257
+      - 258
+      - 264
+      - 273
+      - 274
+      - 302
